# kernel_space_access

./: CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
